...

    val columnModifier = if (centered) Modifier.fillMaxSize() else Modifier
    val columnHorizontal = if (centered) Alignment.CenterHorizontally else Alignment.Start
    val columnVertical = if (centered) Arrangement.Center else Arrangement.Top
    val textAlign = if (centered) TextAlign.Center else TextAlign.Start

    val reliableStops = listOf("All Stops", "Student Union")

    Column(
        modifier = columnModifier,
        horizontalAlignment = columnHorizontal,
        verticalArrangement = columnVertical,
    ) {
...
